fixed seat-table form width on mobile. fixed flex flow for reservation cards on mobile.

--- a/front-end/src/dashboard/Dashboard.css
+++ b/front-end/src/dashboard/Dashboard.css
@@ -169,6 +169,7 @@ align-items: center;
     display: flex;
     text-align: center;
     justify-content: center;
+    flex-flow: row wrap;
 }
 
 .tables_list {
