--- a/front-end/src/layout/Search.css
+++ b/front-end/src/layout/Search.css
@@ -35,7 +35,7 @@
     padding: 1rem;
 }
 
-.background_color {
+.search-input {
     background-color: rgba(250, 246, 211, 0.5);
     width: 19rem;
 }
